Add a new icon for a predertinate theme from system.

--- a/rsc.qrc
+++ b/rsc.qrc
@@ -25,5 +25,6 @@
         <file>img/logoEmpresa.png</file>
         <file>img/logoEmpresa_1.png</file>
         <file>licencia/licencia.txt</file>
+        <file>img/flat_seo-47-64.png</file>
     </qresource>
 </RCC>
