A button has been added to the main interface to call the password reset form.

--- a/rsc.qrc
+++ b/rsc.qrc
@@ -28,5 +28,6 @@
         <file>img/flat_seo-47-64.png</file>
         <file>font/FiraCode-Regular.ttf</file>
         <file>img/excelDocument.png</file>
+        <file>img/Change_password-256.png</file>
     </qresource>
 </RCC>
