--- a/widget.ui
+++ b/widget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>691</width>
+    <width>693</width>
     <height>544</height>
    </rect>
   </property>
@@ -72,6 +72,23 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="btnResetPassword">
+          <property name="toolTip">
+           <string>Resetear clave o password</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="rsc.qrc">
+            <normaloff>:/img/Change_password-256.png</normaloff>:/img/Change_password-256.png</iconset>
+          </property>
+          <property name="autoRaise">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Orientation::Horizontal</enum>
@@ -83,6 +100,13 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Orientation::Vertical</enum>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QToolButton" name="btnRestore">
