--- a/widget.ui
+++ b/widget.ui
@@ -89,6 +89,23 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="firstTimeLogInBtn">
+          <property name="toolTip">
+           <string/>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="rsc.qrc">
+            <normaloff>:/img/Add_User.png</normaloff>:/img/Add_User.png</iconset>
+          </property>
+          <property name="autoRaise">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Orientation::Horizontal</enum>
