--- a/resetpassworddialog.ui
+++ b/resetpassworddialog.ui
@@ -29,7 +29,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="page">
       <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -127,7 +127,7 @@
            </property>
            <property name="icon">
             <iconset resource="rsc.qrc">
-             <normaloff>:/img/open.png</normaloff>:/img/open.png</iconset>
+             <normaloff>:/img/close.png</normaloff>:/img/close.png</iconset>
            </property>
           </widget>
          </item>
@@ -187,7 +187,7 @@
            </property>
            <property name="icon">
             <iconset resource="rsc.qrc">
-             <normaloff>:/img/open.png</normaloff>:/img/open.png</iconset>
+             <normaloff>:/img/close.png</normaloff>:/img/close.png</iconset>
            </property>
           </widget>
          </item>
