--- a/widget.ui
+++ b/widget.ui
@@ -490,7 +490,10 @@
          <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
         </property>
         <property name="selectionBehavior">
-         <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+         <enum>QAbstractItemView::SelectionBehavior::SelectItems</enum>
+        </property>
+        <property name="showGrid">
+         <bool>false</bool>
         </property>
         <property name="sortingEnabled">
          <bool>false</bool>
